Different exec for restart script